# SmartSpecPro

./: .gitignore  .gitleaks.toml  ADMIN_SETTINGS_FIX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  FIXES_SUMMARY.md  KILOCODE_INTEGRATION_SUMMARY.md  KILO_CLI_TUTORIAL.md  NGINX_GUIDE.md  README.md  SECURITY.md  SECURITY_SETUP.md  analysis_ptyxterm.md  backup-prod.sh  dev.sh  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.nginx.yml  docker-compose.yml  gitleaks-report.json  logs-prod.sh  media_mcp_server.py  research_context_management.md  research_long_term_memory.md  restore-test.sh  run-all.sh  setup-cron.sh  setup.sh  status-all.sh  stop-all.sh
desktop-app/src-tauri/: Cargo.toml  Cargo.toml.patch_snippet  schema.sql  tauri.conf.json
desktop-app/src-tauri/.cargo/: audit.toml
desktop-app/src-tauri/migrations/: V001_app_schema.sql  V001_initial_schema.sql
desktop-app/src-tauri/python/: bridge.py
desktop-app/src-tauri/src/: ai_commands.rs  ai_enhancement.rs  chat_commands.rs  cli_commands.rs  cli_service.rs  collab_commands.rs  collaboration.rs  context_builder.rs  cost_persistence.rs  dashboard_commands.rs  database.rs  docker_manager.rs  enterprise.rs  enterprise_commands.rs  error_handling.rs  git_manager.rs  git_workflow.rs  input_validation.rs  job_commands.rs  job_manager.rs  keyring_fallback.rs  lib.rs  lib.rs.patch_snippet  llm_service.rs  main.rs  marketplace.rs  marketplace_commands.rs  memory_manager.rs  memory_monitor.rs  models.rs  multi_workspace.rs  multiworkspace_commands.rs  opencode_commands.rs  performance.rs  performance_commands.rs  platform_tests.rs  plugin_commands.rs  plugin_system.rs  progress_dashboard.rs  python_bridge.rs  (+14 more)
python-backend/: .coveragerc  .env.example  COVERAGE_ROADMAP.md  CREDIT_SYSTEM.md  Dockerfile  MARKUP_FIX.md  NEW_PROVIDERS_RESEARCH.md  PHASE_0.5_COMPLETE.md  PHASE_0_COMPLETE.md  PHASE_0_GAPS_FIXED.md  README.md  analyze_complexity.py  coverage.xml  create_admin_user.py  debug_test.py  docker-compose.yml  pyproject.toml  pytest.ini  pytest.ini.bak  requirements.txt  requirements_additions.txt  temp_create_admin.py
python-backend/app/: __init__.py  background_tasks.py  main.py
python-backend/app/api/: admin.py  admin_impersonation.py  admin_provider_config.py  analytics.py  api_keys.py  approvals.py  artifacts.py  audit_logs.py  auth.py  autopilot.py  control_plane_proxy.py  credits.py  dashboard.py  health.py  internal_provider.py  kilo_cli.py  kilo_media.py  kilo_pty.py  llm_features.py  llm_openai_compat.py  llm_proxy.py  llm_v1.py  oauth.py  openai_compat.py  opencode_gateway.py  orchestrator.py  payments.py  rate_limits.py  rbac.py  routes.py  support_tickets.py  system_health.py  tenants.py  users.py  workflows.py  ws_ticket.py
python-backend/app/clients/: web_gateway.py
python-backend/app/core/: __init__.py  auth.py  auth_enhanced.py  background_tasks.py  cache.py  cache_optimized.py  checkpointer.py  config.py  config.py.patch_snippet  config_validator.py  control_plane_settings.py  credits.py  database.py  database_optimized.py  encryption.py  error_handling.py  errors.py  exceptions.py  input_sanitization.py  langsmith.py  legacy_key.py  logging.py  media_models.py  middleware.py  monitoring.py  monitoring_middleware.py  openapi.py  phase3_config.py  r2_config.py  rate_limiter.py  request_logging.py  request_validator.py  security.py  security_enhanced.py  settings.py  stripe_config.py  vectordb.py  ws_tickets.py
python-backend/app/kilo/: context_manager.py  job_manager.py  memory_extractor.py  memory_store.py  pty_manager.py
python-backend/app/llm_proxy/: __init__.py  gateway.py  gateway_unified.py  gateway_v2.py  models.py  openrouter_wrapper.py  proxy.py  proxy_legacy.py  proxy_v2.py  unified_client.py
python-backend/app/models/: __init__.py  all_models.py  api_key.py  api_key_v2.py  approval.py  asset.py  audit_log.py  credit.py  credits.py  episodic_memory.py  execution.py  gallery.py  generation_task.py  model_comparison.py  notification.py  oauth.py  opencode_key.py  password_reset.py  payment.py  prompt_template.py  provider_config.py  rbac.py  refund.py  semantic_memory.py  (+8 more)
python-backend/data/: smartspec.db
python-backend/docs/: ADMIN_FEATURES.md  ANALYTICS_NOTIFICATIONS.md  API_KEYS_RATE_LIMITS.md  AUDIT_SUPPORT.md  AUTH_GENERATOR_UI_REPORT.md  CLAUDE_CODE_COMPATIBILITY.md  COMPREHENSIVE_PLAN.md  DASHBOARD_DESIGN.md  DASHBOARD_GUIDE.md  DOCKER_SUPPORT_REPORT.md  INTEGRATION_GUIDE.md  KILO_CLI_DIAGRAMS.md  KILO_CLI_RESEARCH.md  LANGCHAIN_MEMORY_PLAN.md  LANGGRAPH_MEMORY_RESEARCH.md  LANGSMITH_EVALUATION.md  NEW_PROVIDERS.md  OPENROUTER_LOAD_BALANCING.md  PAYMENT_INTEGRATION.md  PAYMENT_TESTING.md  PHASE_1_2_REPORT.md  PHASE_1_3_REPORT.md  PHASE_1_4_REPORT.md  PRIORITY_2_REPORT.md  PRIORITY_3_REPORT.md  PRIORITY_4_REPORT.md  PRIORITY_5_REPORT.md  RATE_LIMITING.md  SKILL_MANAGEMENT_UI_REPORT.md  claude_code_skill_comparison.md  integrated_generation_system.md  kie_ai_api_research.md  kilo_cli_research.md  multimodal_generation_architecture.md  multimodal_generation_guide.md  payment_credits_guide.md  proposed_architecture.d2  security_analysis_key_management.md
python-backend/examples/: dashboard_ui_complete.tsx  openrouter_examples.py  payment_ui_example.tsx
python-backend/migrations/: 001_credit_system_integer.sql  002_payment_transactions.sql  003_auth_enhancements.sql  004_moderation_logs.sql  005_templates_and_comparisons.sql  006_notifications.sql  007_api_keys.sql  008_audit_logs.sql  009_support_tickets.sql  010_audit_log_indexes.sql  011_user_preferences.sql  012_webhooks.sql  013_phase3_saas_models.sql  README_PROVIDER_CONFIG.md  create_provider_configs_table.sql
python-backend/scripts/: setup_r2.sh  skill_converter.py
python-backend/tests/: TEST_COVERAGE_REPORT.md  TEST_STRATEGY.md  TEST_SUITE_REPORT.md  conftest.py  test_llm_openai_compat_approval.py  test_llm_openai_compat_audit_throttle.py  test_llm_openai_compat_concurrency.py  test_llm_openai_compat_rate_limit.py  test_openai_compat_forward.py  test_opencode_integration.py
(+1226 files in other folders)
