[project]
name = "smartspec-backend"
version = "0.1.0"
description = "SmartSpec Pro Python Backend - LLM Gateway & Orchestration Service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SmartSpec Team"}
]
keywords = ["llm", "gateway", "orchestration", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Dependencies are managed via requirements.txt for now
# This file is primarily for tool configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Async mode configuration
asyncio_mode = "auto"

# Coverage enforcement - FAIL if coverage is below threshold
addopts = [
    "--cov=app",
    "--cov-config=.coveragerc",
    "--cov-report=term-missing",
    "--cov-report=html:.spec/reports/coverage/html",
    "--cov-report=json:.spec/reports/coverage/coverage.json",
    "--cov-fail-under=80",
    "-v",
    "--tb=short",
]

# Markers for test categorization
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require database/redis)",
    "e2e: End-to-end tests (full system tests)",
    "slow: Tests that take longer than 1 second",
    "auth: Authentication related tests",
    "credits: Credit system related tests",
    "llm: LLM gateway related tests",
    "payment: Payment related tests",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/.venv/*",
    "*/venv/*",
    "app/main.py",  # Entry point, tested via e2e
    "app/llm_proxy/proxy_legacy.py",  # Legacy code, deprecated
    "app/llm_proxy/proxy_v2.py",  # Deprecated, replaced by proxy.py
    "app/llm_proxy/gateway.py",  # Wrapper, tested via gateway_unified
    "app/llm_proxy/gateway_v2.py",  # Wrapper, tested via gateway_unified
    "app/services/llm_monitoring.py",  # Monitoring service, requires external deps
    "app/services/export_service.py",  # Export service, requires external deps
    "app/orchestrator/db_state_manager.py",  # DB state manager, requires DB
    "app/core/monitoring.py",  # Monitoring, requires external deps
    "app/core/monitoring_middleware.py",  # Monitoring middleware
    "app/core/input_sanitization.py",  # Input sanitization, tested via integration
    "app/models/all_models.py",  # Model imports only
    "app/models/user_preferences.py",  # Not used in current phase
    "app/models/webhook.py",  # Webhook models, not used in current phase
    "app/llm_proxy/unified_client.py",  # Requires OpenRouter API, tested via integration
    "app/llm_proxy/openrouter_wrapper.py",  # Requires OpenRouter API, tested via integration
    "app/services/notification_service.py",  # Requires email service, tested via integration
    "app/services/audit_service.py",  # Requires database, tested via integration
    "app/core/auth_enhanced.py",  # Enhanced auth, tested via integration
    "app/core/config_validator.py",  # Config validation, tested via integration
    "app/background_tasks.py",  # Background tasks, tested via integration
    "app/services/oauth_service.py",  # OAuth service, requires external OAuth providers
    "app/services/email_service.py",  # Email service, requires SMTP
    "app/services/auth_service.py",  # Auth service, tested via integration
]

[tool.coverage.paths]
source = ["app"]

[tool.coverage.report]
# Fail if coverage is below this threshold
fail_under = 80

# Exclude lines from coverage
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    
    # Type checking
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    
    # Abstract methods
    "raise NotImplementedError",
    "raise AssertionError",
    
    # Debug/logging
    "if self.debug:",
    "if settings.DEBUG:",
    "logger.debug",
    
    # Defensive programming
    "assert False",
    "raise RuntimeError",
    
    # Platform-specific code
    "if sys.platform",
    
    # Optional dependencies
    "except ImportError:",
    "except ModuleNotFoundError:",
]

# Show missing lines in report
show_missing = true

# Precision for coverage percentage
precision = 2

# Sort by coverage percentage (lowest first)
sort = "Cover"

[tool.coverage.html]
directory = ".spec/reports/coverage/html"
title = "SmartSpec Backend Coverage Report"

[tool.coverage.json]
output = ".spec/reports/coverage/coverage.json"
pretty_print = true

# =============================================================================
# Black (Code Formatter) Configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''

# =============================================================================
# isort (Import Sorter) Configuration
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "venv", "migrations", "alembic"]
known_first_party = ["app"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "langchain", "langgraph"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# =============================================================================
# mypy (Type Checker) Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
exclude = [
    "migrations/",
    "alembic/",
    "tests/",
    ".venv/",
    "venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# =============================================================================
# ruff (Fast Linter) Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "C4"]
"__init__.py" = ["F401"]
