[package]
name = "smartspecpro"
version = "0.1.0"
description = "SmartSpec Pro - Modern Desktop UI for Kilo Code CLI"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "smartspecpro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Python Bridge dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1"
which = "7"

# Database dependencies
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Git dependencies
git2 = "0.19"
keyring = "2"
dirs = "5"

# HTTP Client (for LLM APIs)
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# Encryption & Security
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"

# Error Handling
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Regex for validation
regex = "1.10"

# Lazy static for global state
lazy_static = "1.4"
once_cell = "1.19"

# WASM runtime for plugins
wasmtime = "15"

# Markdown parsing
pulldown-cmark = "0.9"

# File watching
notify = "6.1"

# System info for monitoring
sysinfo = "0.30"
